--- a/views/index.html
+++ b/views/index.html
@@ -16,26 +16,37 @@
     
   </head>
   <body>
-    <h1>My Todo List</h1>
     
-    <div>
-      <button onclick="handlers.toggleAll()">Toggle All</button>
-    </div>
-    
-    <div>
-      <button onclick="handlers.addTodoButton()">Add</button>
-      <input id="addTodoTextInput" type="text">
-    </div>
-    
-    <div>
-      <button onclick="handlers.changeTodoButton()">Change</button>
-      <input id="changeTodoPosition" type="number">
-      <input id="changeTodoTextInput" type="text">
-    </div>
-
+    <header>
     <ul>
-    
+      <li>
+      <a href="/received">For me</a>
+      </li>  
+      
+      <li>
+      <a href="/sent">For others</a>
+      </li>
     </ul>
+    </header>
+    
+    <h1>Send new todo</h1>
+    
+<!--     <div>
+      <button onclick="handlers.toggleAll()">Toggle All</button>
+    </div> -->
+    
+    <form action="new" method="GET">
+      <label for="to">To</label>
+      <input id="to" type="email" placeholder="firstname.lastname@aun.edu.ng">
+      
+      <label for="from">From</label>
+      <input id="from" type="email" placeholder="firstname.lastname@aun.edu.ng">
+      
+      <label for="todo">Todo</label>
+      <input id="todo" type="text" placeholder="Please submit your group work">
+      
+    <button onclick="handlers.addTodoButton()">Send!</button>
+    </form>
     
         <!-- import the webpage's client-side javascript file -->
     <script src="/client.js" defer></script>
