🛰⛲️ Checkpoint ./server.js:908570/160 ./views/index.html:908570/93

--- a/views/index.html
+++ b/views/index.html
@@ -35,17 +35,17 @@
       <button onclick="handlers.toggleAll()">Toggle All</button>
     </div> -->
     
-    <form action="new" method="GET">
-      <label for="to">To</label>
+    <form action="new" method="POST">
+<!--       <label for="to">To</label>
       <input id="to" type="email" placeholder="firstname.lastname@aun.edu.ng">
       
       <label for="from">From</label>
-      <input id="from" type="email" placeholder="firstname.lastname@aun.edu.ng">
+      <input id="from" type="email" placeholder="firstname.lastname@aun.edu.ng"> -->
       
       <label for="todo">Todo</label>
       <input id="todo" type="text" placeholder="Please submit your group work">
       
-    <button onclick="handlers.addTodoButton()">Send!</button>
+    <button type="submit">Send!</button>
     </form>
     
         <!-- import the webpage's client-side javascript file -->
