👂🦂 Checkpoint ./server.js:908570/789 ./views/index.html:908570/12

--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
       <input id="from" type="email" placeholder="firstname.lastname@aun.edu.ng"> -->
       
       <label for="todo">Todo</label>
-      <input id="todo" type="text" placeholder="Please submit your group work">
+      <input id="todo" name="todo" type="text" placeholder="Please submit your group work">
       
     <button type="submit">Send!</button>
     </form>
