--- a/views/index.html
+++ b/views/index.html
@@ -36,11 +36,11 @@
     </div> -->
     
     <form action="new" method="POST">
-<!--       <label for="to">To</label>
+      <label for="to">To</label>
       <input id="to" type="email" placeholder="firstname.lastname@aun.edu.ng">
       
       <label for="from">From</label>
-      <input id="from" type="email" placeholder="firstname.lastname@aun.edu.ng"> -->
+      <input id="from" type="email" placeholder="firstname.lastname@aun.edu.ng">
       
       <label for="todo">Todo</label>
       <input id="todo" name="todo" type="text" placeholder="Please submit your group work">
