🍽🍲 Checkpoint ./server.js:908570/28 ./views/sent.eta:908570/98 ./views/index.html:908570/22

--- a/views/index.html
+++ b/views/index.html
@@ -37,10 +37,10 @@
     
     <form action="new" method="POST">
       <label for="to">To</label>
-      <input id="to" type="email" placeholder="firstname.lastname@aun.edu.ng">
+      <input id="to" name="to" type="email" placeholder="firstname.lastname@aun.edu.ng">
       
       <label for="from">From</label>
-      <input id="from" type="email" placeholder="firstname.lastname@aun.edu.ng">
+      <input id="from" name="from" type="email" placeholder="firstname.lastname@aun.edu.ng">
       
       <label for="todo">Todo</label>
       <input id="todo" name="todo" type="text" placeholder="Please submit your group work">
