--- a/views/index.html
+++ b/views/index.html
@@ -35,15 +35,15 @@
       <button onclick="handlers.toggleAll()">Toggle All</button>
     </div> -->
     
-    <form action="new" method="POST">
+    <form class="glitch-form" action="new" method="POST">
       <label for="to">To</label>
-      <input id="to" name="to" type="email" placeholder="firstname.lastname@aun.edu.ng">
+      <input class="glitch-input" id="to" name="to" type="email" placeholder="firstname.lastname@aun.edu.ng">
       
       <label for="from">From</label>
-      <input id="from" name="from" type="email" placeholder="firstname.lastname@aun.edu.ng">
+      <input class="glitch-input" id="from" name="from" type="email" placeholder="firstname.lastname@aun.edu.ng">
       
       <label for="todo">Todo</label>
-      <input id="todo" name="todo" type="text" placeholder="Please submit your group work">
+      <input class="glitch-input" id="todo" name="todo" type="text" placeholder="Please submit your group work">
       
     <button type="submit">Send!</button>
     </form>
